--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
 	<div id="test_btn">btn</div>
 
 
-	<script src="geekeim.js"></script>
+	<script src="http://localhost/im/web/geekeim.js"></script>
 	
 
 
