--- a/web/test.html
+++ b/web/test.html
@@ -1,32 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
-	<title>test</title>
-	<style>
-		body{background: #ddd;}
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>Insert title here</title>
 
-
-
-		.geekeim{position: absolute;left: 50%;top: 50%;margin-left: -200px;width: 550px;height: 580px; margin-top: -300px;border:1px solid #aaa;border-radius:5px;box-shadow:0 0 30px rgba(0,0,0,0.3);    }
-		/*.geekeim iframe{border: none;}*/
-		#test{border:1px solid #f00;}
-		#test_btn{display: block;background: #000;}
-	</style>
+<style type="text/css">
+*{
+	margin: 0;
+	padding: 0;
+}
+#editor{
+	padding: 5px;
+	border: 1px solid red;
+	height: 300px;
+	width: 700px;
+}
+#test{width: 200px;height: 200px;border:1px solid #f00;}
+</style>
 </head>
 <body>
+	<div id='editor' contenteditable='true'></div>
+	<b id='insertImg' >insertImg</b>
+	fdfeseeeeeeeeeeeeeeee
+
+	<div id="test"></div>
+<script type="text/javascript">
 
 
-	<h1>this is a geeke</h1>
 
-	<div id="test" contentEditable="true">fsfeffffffffffffff</div>
-	<div id="test_btn">btn</div>
+	var editor = document.getElementById('editor');
+	var test = document.getElementById('test');
+
+	editor.insertHtml = function(){
+		var range,canrange = typeof document.createRange === 'function',
+		save = canrange? function(){
+			range = document.getSelection().getRangeAt(0);
+		}:function(){
+			range = document.selection.createRange();
+		},
+		restore = canrange ? function(){
+			var selection = document.getSelection();
+			selection.removeAllRanges();
+			selection.addRange(range);
+		} : function(){
+			var selection = document.selection.createRange();
+			selection.setEndPoint('EndToEnd', range);
+			selection.setEndPoint('StartToStart', range);
+			selection.select();
+		}
+		this.onmouseup = this.onkeyup = function(e) {save();}
+		
+		return function (html) {
+			this.focus();
+			range && restore();
+			if (document.selection) range.pasteHTML(html); //ie
+			else document.execCommand("insertImage", false, html);
+			save();
+		}
+	}.call(editor);
 
 
-	<script src="geekeim.js"></script>
-	
 
 
-	
+	document.getElementById('insertImg').onclick = function(e) {
+		editor.insertHtml("<img src='1.jpeg'>");
+		editor.insertHtml("<img src='1.jpeg'>");
+		// editor.insertImage('1.jpeg');
+		// editor.insertImage('1.jpeg');
+		return false;
+	}
+
+</script>
 </body>
 </html>
